--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@freakycoder/react-native-helpers",
-  "version": "0.0.12",
+  "version": "0.0.2",
   "description": "Easy to use & awesome helpers for React Native.",
   "keywords": [
     "ios",
@@ -32,6 +32,7 @@
   "license": "MIT",
   "peerDependencies": {
     "react": ">= 16.x.x",
-    "react-native": ">= 0.55.x"
+    "react-native": ">= 0.55.x",
+    "@react-native-community/status-bar": "^1.x.x"
   }
 }
