--- a/example/package.json
+++ b/example/package.json
@@ -1,20 +1,35 @@
 {
-  "main": "node_modules/expo/AppEntry.js",
+  "name": "example",
+  "version": "0.0.1",
+  "private": true,
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "eject": "expo eject"
+    "android": "react-native run-android",
+    "ios": "react-native run-ios",
+    "start": "react-native start",
+    "test": "jest",
+    "lint": "eslint ."
   },
   "dependencies": {
-    "@freakycoder/react-native-helpers": "0.0.21",
-    "expo": "^32.0.0",
-    "react": "16.5.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
-    "react-native-card-collection": "0.0.11"
+    "@freakycoder/react-native-custom-text": "0.0.12",
+    "@freakycoder/react-native-helpers": "^0.1.2",
+    "react": "16.9.0",
+    "react-native": "0.61.5",
+    "react-native-card-collection": "0.0.13",
+    "react-native-dynamic-vector-icons": "^0.2.2",
+    "react-native-material-ripple": "^0.9.1",
+    "react-native-vector-icons": "^6.6.0"
   },
   "devDependencies": {
-    "babel-preset-expo": "^5.0.0"
+    "@babel/core": "^7.6.2",
+    "@babel/runtime": "^7.6.2",
+    "@react-native-community/eslint-config": "^0.0.5",
+    "babel-jest": "^24.9.0",
+    "eslint": "^6.5.1",
+    "jest": "^24.9.0",
+    "metro-react-native-babel-preset": "^0.56.0",
+    "react-test-renderer": "16.9.0"
   },
-  "private": true
+  "jest": {
+    "preset": "react-native"
+  }
 }
