--- a/example/package.json
+++ b/example/package.json
@@ -7,29 +7,43 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint ."
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "react": "17.0.1",
+    "react-native": "0.63.3",
     "@freakycoder/react-native-custom-text": "0.0.12",
     "@freakycoder/react-native-helpers": "^0.1.3",
-    "react": "16.9.0",
-    "react-native": "0.61.5",
     "react-native-card-collection": "0.0.13",
-    "react-native-dynamic-vector-icons": "^0.2.2",
+    "react-native-dynamic-vector-icons": "^1.1.4",
     "react-native-material-ripple": "^0.9.1",
-    "react-native-vector-icons": "^6.6.0"
+    "react-native-vector-icons": "^7.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.6.2",
-    "@babel/runtime": "^7.6.2",
-    "@react-native-community/eslint-config": "^0.0.5",
-    "babel-jest": "^24.9.0",
-    "eslint": "^6.5.1",
-    "jest": "^24.9.0",
-    "metro-react-native-babel-preset": "^0.56.0",
-    "react-test-renderer": "16.9.0"
+    "@babel/core": "^7.12.3",
+    "@babel/runtime": "^7.12.1",
+    "@react-native-community/eslint-config": "^2.0.0",
+    "@types/jest": "^26.0.15",
+    "@types/react-native": "^0.63.30",
+    "@types/react-test-renderer": "^16.9.3",
+    "@typescript-eslint/eslint-plugin": "^4.6.0",
+    "@typescript-eslint/parser": "^4.6.0",
+    "babel-jest": "^26.6.1",
+    "eslint": "^7.12.1",
+    "jest": "^26.6.1",
+    "metro-react-native-babel-preset": "^0.63.0",
+    "react-test-renderer": "17.0.1",
+    "typescript": "^4.0.5"
   },
   "jest": {
-    "preset": "react-native"
+    "preset": "react-native",
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "jsx",
+      "json",
+      "node"
+    ]
   }
 }
