--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@freakycoder/react-native-helpers",
-  "version": "0.1.3",
+  "version": "1.0.0",
   "description": "Easy to use & awesome helpers for React Native.",
   "keywords": [
     "ios",
@@ -26,12 +26,42 @@
   ],
   "homepage": "https://www.freakycoder.com",
   "bugs": "https://github.com/WrathChaos/react-native-helpers/issues",
-  "main": "./lib/src/index.js",
+  "main": "./build/dist/index.js",
   "repository": "git@github.com:WrathChaos/react-native-helpers.git",
   "author": "Kuray (FreakyCoder) <kurayogun@gmail.com>",
   "license": "MIT",
+  "scripts": {
+    "build": "cd lib && tsc && cp ../package.json ../build/dist/ && Echo Build completed!",
+    "format": "prettier --write \"src/**/*.ts\" \"src/**/*.js\"",
+    "lint": "tslint -p tsconfig.json",
+    "version": "npm run format && git add -A src",
+    "postversion": "git push && git push --tags"
+  },
   "peerDependencies": {
     "react": ">= 16.x.x",
     "react-native": ">= 0.55.x"
+  },
+  "devDependencies": {
+    "@types/react": "^16.9.53",
+    "@types/react-native": "^0.63.25",
+    "react-native-typescript-transformer": "^1.2.13",
+    "typescript": "^4.0.3",
+    "@react-native-community/eslint-config": "^2.0.0",
+    "eslint": "^7.11.0",
+    "eslint-config-airbnb": "^18.2.0",
+    "husky": "^4.3.0",
+    "lint-staged": "^10.4.2",
+    "prettier": "^2.1.2"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "./src/*.{js,jsx,ts,tsx}": [
+      "npx prettier --write",
+      "eslint src/*.js --fix-dry-run"
+    ]
   }
 }
