--- a/example/package.json
+++ b/example/package.json
@@ -10,30 +10,31 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@freakycoder/react-native-custom-text": "^0.1.2",
+    "@freakycoder/react-native-helpers": "^1.0.1",
     "react": "17.0.1",
-    "react-native": "0.63.3",
-    "@freakycoder/react-native-custom-text": "0.0.12",
-    "@freakycoder/react-native-helpers": "^0.1.3",
+    "react-native": "0.64.1",
     "react-native-card-collection": "0.0.13",
-    "react-native-dynamic-vector-icons": "^1.1.4",
+    "react-native-dynamic-vector-icons": "^1.1.6",
     "react-native-material-ripple": "^0.9.1",
-    "react-native-vector-icons": "^7.1.0"
+    "react-native-vector-icons": "^8.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.3",
-    "@babel/runtime": "^7.12.1",
+    "@babel/core": "^7.12.9",
+    "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
-    "@types/jest": "^26.0.15",
-    "@types/react-native": "^0.63.30",
-    "@types/react-test-renderer": "^16.9.3",
-    "@typescript-eslint/eslint-plugin": "^4.6.0",
-    "@typescript-eslint/parser": "^4.6.0",
-    "babel-jest": "^26.6.1",
-    "eslint": "^7.12.1",
-    "jest": "^26.6.1",
-    "metro-react-native-babel-preset": "^0.63.0",
+    "@types/jest": "^26.0.23",
+    "@types/react-native": "^0.64.5",
+    "@types/react-test-renderer": "^16.9.2",
+    "babel-jest": "^26.6.3",
+    "eslint": "^7.14.0",
+    "jest": "^26.6.3",
+    "metro-react-native-babel-preset": "^0.64.0",
     "react-test-renderer": "17.0.1",
-    "typescript": "^4.0.5"
+    "typescript": "^3.8.3"
+  },
+  "resolutions": {
+    "@types/react": "^17"
   },
   "jest": {
     "preset": "react-native",
